--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
   "dependencies": {
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@material-tailwind/react": "^2.1.10",
     "@mui/icons-material": "^6.1.4",
     "@mui/material": "^6.1.4",
     "@radix-ui/react-icons": "^1.3.0",
+    "@tailwindcss/forms": "^0.5.9",
     "all": "^0.0.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
