--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "tailwindcss": "^3.4.14"
   },
   "dependencies": {
+    "@apollo/client": "^3.11.8",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^6.1.4",
