--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "all": "^0.0.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "flowbite": "^2.5.2",
+    "flowbite-react": "^0.10.2",
     "lucide-react": "^0.453.0",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7"
