--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "tailwindcss": "^3.4.14"
   },
   "dependencies": {
+    "@apollo/client": "^3.11.8",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@material-tailwind/react": "^2.1.10",
@@ -32,6 +33,7 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@tailwindcss/forms": "^0.5.9",
     "all": "^0.0.0",
+    "apollo": "^2.34.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "flowbite": "^2.5.2",
