--- a/package.json
+++ b/package.json
@@ -34,8 +34,10 @@
     "@tailwindcss/forms": "^0.5.9",
     "all": "^0.0.0",
     "apollo-server-express": "^3.13.0",
+    "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "dotenv": "^16.4.5",
     "flowbite": "^2.5.2",
     "flowbite-react": "^0.10.2",
     "jsonwebtoken": "^9.0.2",
