--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,11 @@
-<<<<<<< HEAD
-node_modules
-=======
-# dependencies
-/.pnp
-.pnp.js
-
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
 # Node modules
 node_modules 
 dist
@@ -15,22 +16,13 @@ package-lock.json
 # Environment variables
 .env
 
-# testing
-/coverage
-
-# production
-/build
-
-# misc
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
 .DS_Store
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
->>>>>>> a4446627e794beb782f1cfd3eb555a424e22e856
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
