--- a/Client/package.json
+++ b/Client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "26-ins-react-router",
+  "name": "DevNest",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -20,7 +20,9 @@
     "flowbite-react": "^0.10.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.11.1"
+    "react-router-dom": "^6.11.1",
+    "react-bootstrap": "^2.7.4",
+    "jwt-decode": "^3.1.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
